[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Simone Spaccarotella <spa.simone@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/simonespa/hello-wasm"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
